<resources>
    <string name="app_name">TaskScheduler</string>
    <string name="bundle_time">time</string>
    <string name="newtask_name_title">タイトル</string>
    <string name="newtask_value_defaulttitle">タイトル</string>
    <string name="newtask_value_dateKara">～</string>
    <string name="newtask_value_defaultmemo">メモ</string>
    <string name="newtask_name_radio_inputdate">期間で選択</string>
    <string name="newtask_name_radio_inputdayofweek">曜日で選択</string>
    <string name="bundle_tag_task">task</string>
    <string name="fragment_backstack">fragment_backstack</string>
    <string name="title_newtask_date">日程設定</string>
    <string name="format_memo_date">%d月%d日の予定</string>
</resources>
